--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,16 @@
 h1 {
-  align: center;
+  text-align: center;
   color: AliceBlue;
 }
 
 h2 {
   color: DeepSkyBlue;
-  align: left;
+  text-align: left;
 }
 
 p {
   color: DodgerBlue;
-  align: left;
+  text-align: left;
 }
 
 body {
